# symmetry_invariant_operators

./: .gitignore  LICENSE  README.md  hamiltonian_symmetry.py  pyproject.toml  requirements.txt
invariant_operators/: __init__.py  generate_symmetry_operations.py  hamiltonian_symmetry.py  onebody.py  random_operator.py  symm_io.py  twobody.py
symmetry_invariant_operators/: __init__.py  generate_symmetry_operations.py  onebody.py  random_operator.py  symm_io.py  twobody.py
tests/integration/: test_H4.py
